rnsc/test_data/integration/error/parser/outside_class_directive/before_class_dir/recovery2.rns
should print 3 diagnostics, first is "should" .class MyClass ExtraToken ; <- ExtraToken is second
; missing .super directive is third warning